reduce global scope, refactor, add latest benchmark results